[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://src/feats/portalPack.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.4899, 34.5027 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.9547, 33.5731 )

[node name="portalPack" type="Node2D"]
script = ExtResource( 2 )

[node name="Portal1" type="Area2D" parent="."]
position = Vector2( 50, 0 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Portal1"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Portal1"]
texture = ExtResource( 1 )
flip_v = true

[node name="Portal2" type="Area2D" parent="."]
position = Vector2( -50, 0 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Portal2"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Portal2"]
texture = ExtResource( 1 )
flip_v = true
[connection signal="area_entered" from="Portal1" to="." method="_on_Portal1_area_entered"]
[connection signal="area_exited" from="Portal1" to="." method="_on_Portal1_area_exited"]
[connection signal="area_entered" from="Portal2" to="." method="_on_Portal2_area_entered"]
[connection signal="area_exited" from="Portal2" to="." method="_on_Portal2_area_exited"]
